tests/ui/conf_bad_arg.stderr
error: `conf_file` must be a named value
 --> $DIR/conf_bad_arg.rs:4:18
  |
4 | #![plugin(clippy(conf_file))]
  |                  ^^^^^^^^^
  |
note: Clippy will use default configuration
 --> $DIR/conf_bad_arg.rs:4:18
  |
4 | #![plugin(clippy(conf_file))]
  |                  ^^^^^^^^^

error: aborting due to previous error(s)

